# guided

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  test_config.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: linting.yaml  testing.yaml
docs/: index.md
docs/setup/: index.md
prompts/: DEFAULT_SYSTEM.md
src/guided/: __init__.py  cli.py  environment.py
src/guided/chat/: actions.py  command.py
src/guided/configure/: command.py  config.py  schema.py
src/guided/models/: command.py
src/guided/preferences/: command.py
src/guided/providers/: command.py
src/guided/skills/: __init__.py  command.py  container.py  executor.py  kubernetes.py  library.py  schema.py  web_search.py
src/guided/workspace/: command.py  schema.py
tests/: conftest.py  test_chat_command.py  test_cli.py  test_environment.py  test_models_command.py  test_providers_command.py
tests/chat/: test_actions.py  test_command.py
tests/configure/: test_command.py  test_config.py
tests/examples/snake/: AGENTS.md  _instruct_snakegame.md
tests/examples/todo/: AGENTS.md
tests/examples/weather/: AGENTS.md
tests/models/: test_command.py
tests/preferences/: test_command.py
tests/providers/: test_command.py
tests/skills/: conftest.py  test_command.py  test_executor.py  test_web_search.py
tests/workspace/: test_command.py
