[project]
name = "guided"
version = "0.1.2"
description = "Guided is a CLI tool designed to amplify the work of engineers by providing the scaffolding necessary to build great software with agentic AI resources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.3",
    "deepeval>=3.8.9",
    "docker>=7.1.0",
    "dunamai>=1.26.0",
    "kubernetes>=35.0.0",
    "llmlingua>=0.2.2",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[project.scripts]
guide = "guided.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
